fix(config): corrige importação de @Value para ler propriedade frontend.origin